<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <TextView
            android:id="@+id/tvNomeDoador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doador_exemplo"
            android:textStyle="bold"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvNomeItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/item_exemplo"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descricao_exemplo"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantidade_exemplo"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnExcluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_excluir"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
