<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:id="@+id/etNomeDoador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome_doador"
        android:inputType="textPersonName"
        android:autofillHints="name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etNomeItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome_item"
        android:inputType="text"
        android:autofillHints="username"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/etNomeDoador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_descricao"
        android:inputType="textMultiLine"
        android:autofillHints="description"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/etNomeItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etQuantidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_quantidade"
        android:inputType="number"
        android:autofillHints="postalCode"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/etDescricao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnAtualizar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_atualizar"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/etQuantidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_voltar"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/btnAtualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
