<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cadastro_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroActivity">

    <!-- Nome do Doador -->
    <EditText
        android:id="@+id/etNomeDoador"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome_doador"
        android:inputType="textPersonName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="16dp" />

    <!-- Nome do Item -->
    <EditText
        android:id="@+id/etNomeItem"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome_item"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/etNomeDoador"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp" />

    <!-- Descrição -->
    <EditText
        android:id="@+id/etDescricao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_descricao"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/etNomeItem"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp" />

    <!-- Quantidade -->
    <EditText
        android:id="@+id/etQuantidade"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_quantidade"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@id/etDescricao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp" />

    <!-- Botão Salvar -->
    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_salvar"
        app:layout_constraintTop_toBottomOf="@id/etQuantidade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp" />

    <!-- Botão Voltar -->
    <Button
        android:id="@+id/btnVoltar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_voltar"
        app:layout_constraintTop_toBottomOf="@id/btnSalvar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
